Fix .page-nav illegible links

--- a/noedit.sigma.css
+++ b/noedit.sigma.css
@@ -254,7 +254,7 @@ p.page-nav {
     position: relative;
     bottom: 20px;
     background: rgba(159, 149, 194, 0.19) !important;
-    backdrop-filter: blur(6.1px) url(#crystal-distortion-minus) invert(10%);
+    backdrop-filter: blur(6.1px) url(#crystal-distortion-plus) invert(10%);
     opacity: 54%;
     -webkit-backdrop-filter: blur(8.1px);;
     box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.2), inset 0 2px 2px 2px rgba(241, 227, 255, 0.8);
@@ -700,22 +700,28 @@ a {
   color: #ba90d5;
 }
 @media (prefers-color-scheme: dark) {
-  a {
+  a:not(.page-nav a) {
     color: #694480;
   }
   a:hover, a:visited {
     text-shadow: 1px 1px 1px 2px;
+  }
+  a:hover {
+    color: #c094db;
+    text-decoration: underline;
   }
 }
 a:hover {
   color: #c094db;
   text-decoration: underline;
 }
-a:active {
+a:active, .page-nav a, .page-nav a:visited {
   color: #9047bd;
+}
+a:active {
   text-decoration: underline;
 }
-a:visited {
+a:visited:not(.page-nav a) {
   color: #a070be;
   text-decoration: none;
 }
